<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Yes/No Randomizer</string>
    <string name="decide_button_text">Decide!</string>
    <string name="question_text_hint">Enter your question (optional)</string>
    <string name="yes_value">Yes</string>
    <string name="no_value">No</string>
    <string name="pip_button_text">Float answer</string>
    <string name="pip_unavailable">Picture-in-picture is unavailable. Check that it is allowed for this app in Settings.</string>
    <string name="answer_no_decision" translatable="false">\u2026</string>
    <string name="pip_new_answer">New Answer</string>
    <string name="language_label">Language</string>
</resources>
