...
          focusManager.clearFocus()
          diceState.rollTo(if (Random.nextBoolean()) R.string.yes_value else R.string.no_value)
        },
        scrollState = scrollState,
        modifier = Modifier.weight(1f),
        diceModifier = Modifier
          .testTag("answer-dice")
          .onGloballyPositioned { coordinates ->
            val bounds = coordinates.boundsInWindow()
            answerBounds = Rect(
              bounds.left.toInt(), bounds.top.toInt(), bounds.right.toInt(), bounds.bottom.toInt()
            )
          }
...
          TextButton(
            enabled = !diceState.isRolling && diceState.answer != R.string.answer_no_decision,
            onClick = {
              focusManager.clearFocus()
              pinAnswer()
            },
            modifier = Modifier.testTag("pin-answer")
          ) {
            Text(stringResource(R.string.pip_button_text))
          }
        }
      }
    }
...
    const val ACTION_NEW_ANSWER = "com.sblashkov.yesnorandomizer.NEW_ANSWER"
    const val LANGUAGE_PREF_KEY = "language_code_pref"
    const val PREFS_NAME = "yesnorandomizer_prefs"

    val languageNames = mapOf(
      "en" to "🇺🇸 English (US)",
      "es" to "🇪🇸 Español",
      "fr" to "🇫🇷 Français",
      "ar" to "🇸🇦العربية ",
      "es-419" to "🇲🇽 Español (Latinoamérica)",
      "de" to "🇩🇪 Deutsch",
      "hi" to "🇮🇳 हिन्दी",
      "id" to "🇮🇩 Indonesia",
...
        } else {
          MaterialTheme.colorScheme.tertiary
        },
        textAlign = TextAlign.Center,
        maxLines = 1,
        overflow = TextOverflow.Ellipsis,
        modifier = Modifier.testTag("answer-text")
      )
    }
  }
}

