...
        Button(
          enabled = !diceState.isRolling,
          onClick = onDecide,
          modifier = Modifier
            .fillMaxWidth()
            .height(56.dp)
            .testTag("decide-button")
        ) {
          Text(
            stringResource(R.string.decide_button_text),
            style = MaterialTheme.typography.labelLarge
          )
        }
...
